--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_271
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.1
-	yarn_mappings=1.16.1+build.1
+	minecraft_version=1.16.5
+	yarn_mappings=1.16.5+build.1
 	loader_version=0.8.8+build.202
 
 # Mod Properties
@@ -15,4 +15,4 @@ org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_271
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.17.0+build.386-1.16.1
+	fabric_version=0.29.3+1.16
