--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_271
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.5
-	yarn_mappings=1.16.5+build.1
+	minecraft_version=20w51a
+	yarn_mappings=20w51a+build.1
 	loader_version=0.8.8+build.202
 
 # Mod Properties
@@ -15,4 +15,4 @@ org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_271
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.29.3+1.16
+	fabric_version=0.29.3+1.17
