--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx4G
 org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_271
 
 # Fabric Properties
@@ -9,10 +10,10 @@ org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_271
 	loader_version=0.8.8+build.202
 
 # Mod Properties
-	mod_version = 3.2
+	mod_version = 3.2.1
 	maven_group = com.ptsmods
 	archives_base_name = MoreCommands
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.29.3+1.16
+	fabric_version=0.30.0+1.16
