--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ buildscript {
 
 plugins {
 	id 'fabric-loom' version '0.4-SNAPSHOT'
-	id 'maven-publish'
 }
 
 apply plugin: 'com.github.johnrengelman.shadow'
@@ -18,7 +17,7 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
-task fatJar( type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar ) {
+task fatJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
 	archiveFileName = "${archivesBaseName}-${archiveVersion.get()}_${project.minecraft_version}.${archiveExtension.get()}"
 	from remapJar
 	configurations = [project.configurations.compile]
@@ -64,31 +63,6 @@ tasks.withType(JavaCompile) {
 // if it is present.
 // If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = "sources"
+	archiveClassifier.set("sources")
 	from sourceSets.main.allSource
-}
-
-jar {
-	from "LICENSE"
-}
-
-// configure the maven publication
-publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			// add all the jars that should be included when publishing to maven
-			artifact(remapJar) {
-				builtBy remapJar
-			}
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
-		}
-	}
-
-	// select the repositories you want to publish to
-	repositories {
-		// uncomment to publish to the local maven
-		//mavenLocal()
-	}
 }
