--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 # Done to increase the memory available to gradle.
+org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx4G
 org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_271
 
