--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,19 @@
 # Done to increase the memory available to gradle.
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx4G
-org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_271
+org.gradle.java.home=C:\\Program Files\\AdoptOpenJDK\\jdk-15.0.2.7-hotspot
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=21w08b
-	yarn_mappings=21w08b+build.1
+	minecraft_version=21w10a
+	yarn_mappings=21w10a+build.3
 	loader_version=0.11.1
 
 # Mod Properties
-	mod_version = 3.3
+	mod_version = 3.3.1
 	maven_group = com.ptsmods
 	archives_base_name = MoreCommands
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.31.1+1.17
+	fabric_version=0.32.2+1.17
