--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 minecraft_version_least=1.16.4
-minecraft_version_most=21w17a
-mod_version=3.6
+minecraft_version_most=1.17-rc1
+mod_version=3.7
 maven_group=com.ptsmods
 archives_base_name=MoreCommands
 loader_version=0.11.3
@@ -14,15 +14,15 @@ loader_version=0.11.3
 # https://maven.fabricmc.net/net/fabricmc/yarn/
 # https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 # https://fabricmc.net/versions.html?&version=1.16.5
-# https://fabricmc.net/versions.html?&version=21w17a
+# https://fabricmc.net/versions.html?&version=1.17-rc1
 
 # Different properties for different versions for testing (mostly checking method signatures between versions).
 ## 1.16 PROPERTIES
 #minecraft_version=1.16.5
-#yarn_mappings=1.16.5+build.1
-#fabric_version=0.33.0+1.16
+#yarn_mappings=1.16.5+build.9
+#fabric_version=0.34.2+1.16
 
 ## 1.17 SETTINGS
-minecraft_version=21w17a
-yarn_mappings=21w17a+build.14
-fabric_version=0.33.4+1.17
+minecraft_version=1.17-rc1
+yarn_mappings=1.17-rc1+build.4
+fabric_version=0.34.8+1.17
