--- a/gradle.properties
+++ b/gradle.properties
@@ -4,25 +4,25 @@ org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 minecraft_version_least=1.16.4
-minecraft_version_most=1.17-rc1
-mod_version=3.7
+minecraft_version_most=1.17
+mod_version=3.7.1
 maven_group=com.ptsmods
 archives_base_name=MoreCommands
-loader_version=0.11.3
+loader_version=0.11.6
 
 ## Useful links
 # https://maven.fabricmc.net/net/fabricmc/yarn/
 # https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 # https://fabricmc.net/versions.html?&version=1.16.5
-# https://fabricmc.net/versions.html?&version=1.17-rc1
+# https://fabricmc.net/versions.html?&version=1.17
 
 # Different properties for different versions for testing (mostly checking method signatures between versions).
 ## 1.16 PROPERTIES
 #minecraft_version=1.16.5
 #yarn_mappings=1.16.5+build.9
-#fabric_version=0.34.2+1.16
+#fabric_version=0.35.1+1.16
 
-## 1.17 SETTINGS
-minecraft_version=1.17-rc1
-yarn_mappings=1.17-rc1+build.4
-fabric_version=0.34.8+1.17
+## 1.17 PROPERTIES
+minecraft_version=1.17
+yarn_mappings=1.17+build.11
+fabric_version=0.35.2+1.17
