--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx4G
 # Fabric Properties
 minecraft_version_least=1.16.4
 minecraft_version_most=1.17.1
-mod_version=3.8
+mod_version=3.8.1
 maven_group=com.ptsmods
 archives_base_name=MoreCommands
 loader_version=0.11.6
@@ -19,8 +19,8 @@ loader_version=0.11.6
 # Different properties for different versions for testing (mostly checking method signatures between versions).
 ## 1.16 PROPERTIES
 #minecraft_version=1.16.5
-#yarn_mappings=1.16.5+build.9
-#fabric_version=0.35.1+1.16
+#yarn_mappings=10
+#fabric_version=0.36.0+1.16
 
 ## 1.17 PROPERTIES
 minecraft_version=1.17.1
