--- a/common/build.gradle
+++ b/common/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
     implementation files("../lib/discord-rpc-1.6.2.jar")
     implementation "com.ptsmods:asmremapper:1.0"
-    implementation("com.ptsmods:MySQLw:1.5.1") {
+    implementation("com.ptsmods:mysqlw:1.6") {
         exclude group: "com.google.guava", module: "guava"
     }
 
