--- a/common/build.gradle
+++ b/common/build.gradle
@@ -18,9 +18,7 @@ dependencies {
 
     implementation files("../lib/discord-rpc-1.6.2.jar")
     implementation "com.ptsmods:asmremapper:1.0.1"
-    implementation("com.ptsmods:mysqlw:1.6") {
-        exclude group: "com.google.guava", module: "guava"
-    }
+    implementation "com.ptsmods:mysqlw:1.6.1"
 
     api project(path: ":common:API", configuration: "namedElements")
     implementation project(path: ":common:Compat:Compat16", configuration: "namedElements")
