--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx6G
 
 # https://fabricmc.net/develop
 minecraft_version_least=1.16.4
-minecraft_version=1.19-pre2
+minecraft_version=1.19-rc2
 yarn_build=1
 enabled_platforms=fabric
 
@@ -10,9 +10,10 @@ archives_base_name=MoreCommands
 mod_version=4.0
 maven_group=com.ptsmods.morecommands
 
-architectury_version=5.4.13
+# https://maven.architectury.dev/dev/architectury/architectury/
+architectury_version=5.4.15
 
 fabric_loader_version=0.14.6
-fabric_api_version=0.52.4+1.19
+fabric_api_version=0.55.1+1.19
 
 forge_version=1.18.2-40.1.0
