Use Quiltflower for sources generation

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
     id "dev.architectury.loom" version "0.12.0-SNAPSHOT" apply false
     id "io.freefair.lombok" version "6.4.3" apply false
+    id 'io.github.juuxel.loom-quiltflower' version '1.7.1' apply false
 }
 
 architectury {
@@ -11,6 +12,7 @@ architectury {
 subprojects {
     apply plugin: "dev.architectury.loom"
     apply plugin: "io.freefair.lombok"
+    apply plugin: "io.github.juuxel.loom-quiltflower"
 }
 
 allprojects {
