--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@ org.gradle.jvmargs=-Xmx6G
 
 # https://fabricmc.net/develop
 minecraft_version_least=1.16.4
-minecraft_version=1.19-rc2
+minecraft_version=1.19
 yarn_build=1
-enabled_platforms=fabric
+enabled_platforms=fabric,forge
 
 archives_base_name=MoreCommands
 mod_version=4.0
@@ -16,4 +16,4 @@ architectury_version=5.4.15
 fabric_loader_version=0.14.6
 fabric_api_version=0.55.1+1.19
 
-forge_version=1.18.2-40.1.0
+forge_version=1.19-41.0.1
