--- a/common/Compat/Compat19/build.gradle
+++ b/common/Compat/Compat19/build.gradle
@@ -3,8 +3,8 @@ architectury {
 }
 
 dependencies {
-    minecraft "com.mojang:minecraft:1.19-rc2"
-    mappings "net.fabricmc:yarn:1.19-rc2+build.1:mergedv2"
+    minecraft "com.mojang:minecraft:1.19"
+    mappings "net.fabricmc:yarn:1.19+build.4:mergedv2"
 
     // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
