--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
+    id "com.roscopeco.jasm" version "0.6.0" apply false
     id "dev.architectury.loom" version "0.12.0-SNAPSHOT" apply false
     id "io.freefair.lombok" version "6.4.3" apply false
     id 'io.github.juuxel.loom-quiltflower' version '1.7.1' apply false
@@ -10,6 +11,7 @@ architectury {
 }
 
 subprojects {
+    apply plugin: "com.roscopeco.jasm"
     apply plugin: "dev.architectury.loom"
     apply plugin: "io.freefair.lombok"
     apply plugin: "io.github.juuxel.loom-quiltflower"
