--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -40,8 +40,8 @@ dependencies {
     forge "net.minecraftforge:forge:${rootProject.forge_version}"
     modApi "dev.architectury:architectury-forge:${rootProject.architectury_version}"
 
-    common "com.ptsmods:mysqlw:1.7"
-    shadowCommon "com.ptsmods:mysqlw:1.7"
+    common 'com.ptsmods:mysqlw:1.9.2'
+    shadowCommon "com.ptsmods:mysqlw:1.9.2"
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
     common(project(path: ":common:API", configuration: "namedElements")) { transitive false }
@@ -89,6 +89,10 @@ sourcesJar {
     def commonSources = project(":common").sourcesJar
     dependsOn commonSources
     from commonSources.archiveFile.map { zipTree(it) }
+}
+
+repositories {
+    mavenCentral()
 }
 
 components.java {
