--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 
     forge "net.minecraftforge:forge:${rootProject.forge_version}"
     modApi "dev.architectury:architectury-forge:${rootProject.architectury_version}"
+    modImplementation "com.ptsmods:devlogin:3.1"
 
     common 'com.ptsmods:mysqlw:1.9.2'
     shadowCommon "com.ptsmods:mysqlw:1.9.2"
