--- a/settings.gradle
+++ b/settings.gradle
@@ -22,12 +22,6 @@ include 'common:Compat:Compat17'
 include 'common:Compat:Compat18'
 include 'common:Compat:Compat182'
 include 'common:Compat:Compat19'
-
-findProject(':common:API')?.name = 'API'
-findProject(':common:Compat')?.name = 'Compat'
-findProject(':common:Compat:Compat16')?.name = 'Compat16'
-findProject(':common:Compat:Compat17')?.name = 'Compat17'
-findProject(':common:Compat:Compat18')?.name = 'Compat18'
-findProject(':common:Compat:Compat182')?.name = 'Compat182'
-findProject(':common:Compat:Compat19')?.name = 'Compat19'
-
+include 'common:Compat:Compat190'
+include 'common:Compat:Compat191'
+include 'common:Compat:Compat192'
