--- a/common/Compat/Compat17/build.gradle
+++ b/common/Compat/Compat17/build.gradle
@@ -8,7 +8,7 @@ dependencies {
 
     // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
-    modApi "dev.architectury:architectury:${rootProject.architectury_version}"
+    modApi "dev.architectury:architectury:2.10.12"
 
     implementation project(path: ":common:API", configuration: "namedElements")
     implementation project(path: ":common:Compat:Compat16", configuration: "namedElements")
