Take sources from the remapJar task as the transform tasks aren't remapped

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -67,7 +67,7 @@ task shadowCompat(type: Jar) {
     archiveFileName = "${archivesBaseName}-${archiveVersion.get()}_${rootProject.minecraft_version_least}-${rootProject.minecraft_version}_FABRIC.${archiveExtension.get()}"
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
     from zipTree(remapJar.archiveFile)
-    from { project(":common:Compat").subprojects.collect { zipTree(it.transformProductionFabric.archiveFile) } }
+    from { project(":common:Compat").subprojects.collect { zipTree(it.remapJar.archiveFile) } }
 }
 
 tasks.build.dependsOn(shadowCompat)
