Fix the compat projects not remapping properly on Forge Painful fix, but there's no better fix rn as only forge projects can use srg as a target namespace in the remapJar task.

--- a/common/Compat/build.gradle
+++ b/common/Compat/build.gradle
@@ -11,11 +11,13 @@ dependencies {
     modApi "dev.architectury:architectury:${rootProject.architectury_version}"
 }
 
-publishing {
-    publications {
-        mavenCommon(MavenPublication) {
-            artifactId = rootProject.archives_base_name
-            from components.java
-        }
-    }
+subprojects {
+//    loom {
+//        setGenerateSrgTiny(true)
+//    }
+//
+//    task remapJarSrg(type: RemapJarTask) {
+//        inputFile = jar.archiveFile
+//        targetNamespace = 'srg'
+//    }
 }
