--- a/settings.gradle
+++ b/settings.gradle
@@ -19,9 +19,16 @@ include 'common:API'
 include 'common:Compat'
 include 'common:Compat:Compat16'
 include 'common:Compat:Compat17'
+include 'common:Compat:Compat17:forge'
 include 'common:Compat:Compat18'
+include 'common:Compat:Compat18:forge'
 include 'common:Compat:Compat182'
+include 'common:Compat:Compat182:forge'
 include 'common:Compat:Compat19'
+include 'common:Compat:Compat19:forge'
 include 'common:Compat:Compat190'
+include 'common:Compat:Compat190:forge'
 include 'common:Compat:Compat191'
+include 'common:Compat:Compat191:forge'
 include 'common:Compat:Compat192'
+include 'common:Compat:Compat192:forge'
