Fix min version in Forge jar

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -71,7 +71,7 @@ shadowJar {
 }
 
 task shadowCompat(type: Jar) {
-    archiveFileName = "${archivesBaseName}-${archiveVersion.get()}_${rootProject.minecraft_version_least}-${rootProject.minecraft_version}_FORGE.${archiveExtension.get()}"
+    archiveFileName = "${archivesBaseName}-${archiveVersion.get()}_${rootProject.minecraft_version_least_forge}-${rootProject.minecraft_version}_FORGE.${archiveExtension.get()}"
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
     from zipTree(remapJar.archiveFile)
     from { project(":common:Compat").subprojects.collect { if (it.getChildProjects().containsKey("forge"))
