--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ org.gradle.jvmargs=-Xmx24G
 
 # https://fabricmc.net/develop
 minecraft_version_least=1.16.4
+minecraft_version_least_forge=1.17.1
 minecraft_version=1.19.2
 enabled_platforms=fabric,forge
 
