Lots and lots of misc fixes

--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,8 @@ include 'common:Compat:Compat17'
 include 'common:Compat:Compat17:forge'
 include 'common:Compat:Compat18'
 include 'common:Compat:Compat18:forge'
+include 'common:Compat:Compat180'
+include 'common:Compat:Compat180:forge'
 include 'common:Compat:Compat182'
 include 'common:Compat:Compat182:forge'
 include 'common:Compat:Compat19'
