--- a/common/Compat/Compat192/build.gradle
+++ b/common/Compat/Compat192/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation project(path: ":common:Compat:Compat16", configuration: "namedElements")
     implementation project(path: ":common:Compat:Compat17", configuration: "namedElements")
     implementation project(path: ":common:Compat:Compat18", configuration: "namedElements")
+    implementation project(path: ":common:Compat:Compat180", configuration: "namedElements")
     implementation project(path: ":common:Compat:Compat182", configuration: "namedElements")
     implementation project(path: ":common:Compat:Compat19", configuration: "namedElements")
     implementation project(path: ":common:Compat:Compat190", configuration: "namedElements")
