--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -65,7 +65,7 @@ task shadowCompat(type: Jar) {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
     manifest.from jar.manifest
     from zipTree(remapJar.archiveFile)
-    from { project(":common:Compat").subprojects.collect { zipTree(it.remapJar.archiveFile) } }
+    from { project(":common:Compat").subprojects.findAll { ("forge" != it.name) }.collect { zipTree(it.remapJar.archiveFile) } }
 }
 
 tasks.build.dependsOn(shadowCompat)
