Add Forge-related compat classes Forge cannot keep a change for more than a couple of major releases and likes to change fundamentals up every now and then.

--- a/common/Compat/Compat17/forge/build.gradle
+++ b/common/Compat/Compat17/forge/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     mappings loom.officialMojangMappings()
 
     forge "net.minecraftforge:forge:1.17.1-37.1.1"
+    implementation project(path: ":common:API", configuration: "namedElements")
 }
 
 remapJar {
