Fix client sourceset of fabric project not being included in fabric jar

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -66,6 +66,8 @@ shadowJar {
     destinationDirectory.set file(destinationDirectory.get().asFile.toPath().resolve("../devlibs"))
     exclude "architectury.common.json"
 
+    from sourceSets.client.output
+
     configurations = [project.configurations.shadowCommon]
     classifier "dev-shadow"
 }
