--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "7.1.2"
+    id "com.github.johnrengelman.shadow" version "8.1.1"
 }
 
 architectury {
@@ -64,7 +64,7 @@ shadowJar {
     exclude "architectury.common.json"
 
     configurations = [project.configurations.shadowCommon]
-    classifier "dev-shadow"
+    archiveClassifier = "dev-shadow"
 }
 
 task shadowCompat(type: Jar) {
@@ -82,12 +82,12 @@ remapJar {
     destinationDirectory.set file(destinationDirectory.get().asFile.toPath().resolve("../devlibs"))
     inputFile.set shadowJar.archiveFile
     dependsOn shadowJar
-    classifier "dev-shadow-remap"
+    archiveClassifier = "dev-shadow-remap"
 }
 
 jar {
     destinationDirectory.set file(destinationDirectory.get().asFile.toPath().resolve("../devlibs"))
-    classifier "dev"
+    archiveClassifier = "dev"
 }
 
 sourcesJar {
