--- a/common/Compat/Compat194/forge/build.gradle
+++ b/common/Compat/Compat194/forge/build.gradle
@@ -13,11 +13,11 @@ dependencies {
 remapJar {
     destinationDirectory.set file(destinationDirectory.get().asFile.toPath().resolve("../devlibs"))
     inputFile.set jar.archiveFile
-    classifier "remap"
+    archiveClassifier = "remap"
 }
 
 jar {
     destinationDirectory.set file(destinationDirectory.get().asFile.toPath().resolve("../devlibs"))
     from zipTree(project.parent.transformProductionForge.archiveFile)
-    classifier null
+    archiveClassifier = null
 }
